# bs-django-auth

./: .env.example  Dockerfile  Procfile  README.md  pyproject.toml
auth_service/: settings.py  urls.py
users/: models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
